--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div>
             <img src="img/myAvatar.png" alt="My Photo">
+            <img src="img/myAvatar.png" alt="My Photo2">
             <h1>Bukola Politician (SDP)</h1>
             <hr>
             <p id="lateef">I am a statistician and Mathematician</p>
